# stcdude

./: KCDBFILE.txt  Makefile  PROTOCOL.txt  README  README.md  bootstrap  configure.ac  default.lua  init.lua  main.c  mcudb.c  payload.c  stcdude.c  stcdude.h  uart.c
logicdumps/: optinfo.logicdata
lua/mcudb/: stc10fx.lua
lua/seq/: 12_fwrite.lua  info.lua
mcudb/: stc10fx.lua  stc12x.lua
scripts/: cdbinject.lua  csv2c  csv2raw  dsm2lua  dumper.lua
src/: Makefile  Makefile.am  crc-experiments.c  datafiles.mk  main.c  mcudb.c  mcudb.h  payload.c  payload.h  stcdude  stcdude.c  stcdude.h  uart.c  uart.h
src/lua/: init.lua
src/lua/mcudb/: 1.lua  10.lua  11.lua  12.lua  13.lua  2.lua  3.lua  4.lua  5.lua  6.lua  7.lua  9.lua
src/lua/seq/: 12_ewrite.lua  12_fwrite.lua
